# tdxrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_en.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benches/: reader_bench.rs
docs/: ADJUSTER_ALGORITHM.md  CODE_REFERENCE.md  INSTALL.md
docs/public/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  ETF.md  F10.md  FUND.md  PYTHON_BEST_PRACTICES.md  README.md
examples/: demo.py  demo.rs  demo_finance.py  demo_kline.py  gen_bench_charts.py  test_pro_import.py
examples/f10/: download_f10.py  f10_dumper.py  f10_parser.py  test_all_apis.py  test_final_parser.py  test_rust_f10.py  test_rust_parser.py
python/tdxrs/: __init__.py  __main__.py  cli.py  cli_format.py  constants.py  downloader.py  pro.py
src/: constants.rs  error.rs  error_codes.rs  helpers.rs  lib.rs  logging.rs
src/block/: client.rs  mod.rs  query.rs  types.rs
src/etf/: client.rs  constants.rs  mod.rs  types.rs  utils.rs
src/fund/: client.rs  constants.rs  mod.rs  types.rs  utils.rs
src/net/: async_client.rs  async_connection.rs  client.rs  connection.rs  direct_client.rs  f10_client.rs  finance_client.rs  mod.rs  packet.rs  pool.rs  smart_client.rs  utils.rs
src/profile/: client.rs  constants.rs  mod.rs  parser.rs  parser_f10.rs  types.rs
src/protocol/: adjuster.rs  constants.rs  finance_fields.rs  fq_service.rs  mod.rs  parsers.rs  types.rs
src/python/: mod.rs  py_async_client.rs  py_client.rs  py_constants.rs  py_dataframe.rs  py_direct_client.rs  py_etf.rs  py_fund.rs  py_profile.rs  py_reader.rs  py_smart_client.rs
src/reader/: block.rs  daily_bar.rs  financial.rs  min_bar.rs  mod.rs
tests/: bench_etf_f10.py  bench_network.py  bench_optimization.py  bench_performance.py  bench_reader.py  bench_utils.py  compare_tdxpy_tdxrs.py  gen_binary_fixtures.py  net_test.rs  test_async_client.rs  test_etf_module.py  test_f10_module.py  validate_readers.rs
