[package]
name = "tdxrs"
version = "0.5.0"
edition = "2021"
description = "TDX (通达信) market data parser — Rust implementation with Python bindings"
license = "MIT"
readme = "README.md"
authors = ["Chiang Tao <chiangtao_fan@hotmail.com>"]
repository = "https://github.com/jiangtaovan/tdxrs"
homepage = "https://github.com/jiangtaovan/tdxrs"

[features]
default = []
f10 = []

[lib]
name = "tdxrs"
crate-type = ["cdylib", "rlib"]  # cdylib for Python .pyd, rlib for Rust tests

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flate2 = "1"
# encoding_rs — GBK/GB2312 中文编码 (板块、财务数据中的中文名称)
encoding_rs = "0.8"
# regex — F10 文本解析
regex = "1"
# tokio — async I/O runtime. 已启用编译。
# 注意: x86_64-pc-windows-gnu 需要 MSYS2 dlltool (详见 docs/INSTALL.md)
tokio = { version = "1.50.0", features = [
    "net", "io-util", "rt", "rt-multi-thread", "time", "sync", "macros",
] }

[dev-dependencies]
tempfile = "3"
# criterion — 微基准测试框架 (cargo bench)
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "reader_bench"
harness = false

# Release profile — 最大化性能
[profile.release]
opt-level = 3  # 最高优化级别
lto = true      # 链接时优化 (跨 crate 内联)
