[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tdxrs"
version = "0.6.6"
description = "TDX (通达信) market data parser — Rust implementation with Python bindings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["tdx", "通达信", "stock", "market-data", "kline", "finance", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
authors = [
    {name = "Chiang Tao", email = "chiangtao_fan@hotmail.com"}
]

[project.scripts]
tdxrs = "tdxrs.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=1.0"]   # for *_dataframe() methods
dev = ["pytest", "pandas>=1.0"]

[project.urls]
repository = "https://github.com/jiangtaovan/tdxrs"

# === maturin config ===
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"              # Python package scaffolding (__init__.py etc.)
module-name = "tdxrs._internal"       # Native extension loaded as tdxrs._internal
# 排除不需要发布到 PyPI 的目录 (测试数据/bench/示例/临时文档)
exclude = [
    "tests/**",
    "benches/**",
    "examples/**",
    "docs/**",
    "tools/**",
    "assets/**",
    ".github/**",
    "todo.md",
    "CLAUDE.md",
    "Dockerfile",
    ".dockerignore",
]
